# Lab7-Factory_Pattern

./: .gitignore  CMakeLists.txt
headers/: add.hpp  base.hpp  div.hpp  factory_calculator.hpp  mult.hpp  op.hpp  pow.hpp  rand.hpp  sub.hpp
src/: factory_calculator.cpp  main  main.cpp
tests/: add_test.hpp  div_test.hpp  mult_test.hpp  op_test.hpp  pow_test.hpp  rand_test.hpp  sub_test.hpp  unit_test.cpp
